# psybook

./: pyproject.toml
src/: psybook.sqlite3
src/psybook/: main.py
src/psybook/api/: routes.py
src/psybook/infra/: db.py  memory_store.py
src/psybook/models/: db_models.py  schemas.py
src/psybook/services/: booking_service.py
src/psybook/static/: main.js  style.css
src/psybook/templates/: index.html
src/psybook/web/: routes.py
tests/: test_boooking.py
